# MagenBoy

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Cross.toml  Makefile.toml  README.md  nx.Dockerfile  rust-toolchain.toml
baremetal/: Cargo.toml  build.bat  build.rs  build.sh  config.txt  link.ld
baremetal/.cargo/: config.toml
baremetal/src/: boot.rs  boot_armv7a.s  configuration.rs  logging.rs  main.rs
baremetal/src/drivers/: gpio_joypad.rs  ili9341_gfx_device.rs  mod.rs
baremetal/src/peripherals/: dma.rs  gpio.rs  gpu.rs  mailbox.rs  mini_uart.rs  mod.rs  spi.rs  timer.rs  utils.rs
common/: Cargo.toml  build.rs
common/benches/: inter_bench.rs
common/src/: emulation_menu.rs  initialization.rs  interpolation.rs  lib.rs  logging.rs  mbc_handler.rs  menu.rs  mpmc_gfx_device.rs  scale.c
common/src/audio/: audio_resampler.rs  manual_audio_resampler.rs
common/src/joypad_menu/: joypad_gfx_menu.rs  mod.rs
core/: Cargo.toml
core/benches/: lib_gb_bench.rs
core/src/: lib.rs
core/src/apu/: apu_registers_updater.rs  audio_device.rs  channel.rs  freq_sweep.rs  gb_apu.rs  mod.rs  sample_producer.rs  sound_terminal.rs  square_sample_producer.rs  wave_sample_producer.rs
core/src/cpu/: disassembler.rs  gb_cpu.rs  mod.rs  opcode_runner.rs  register.rs
core/src/debugger/: dbg_mmu.rs  disassembler.rs  mod.rs
core/src/keypad/: button.rs  joypad.rs  joypad_handler.rs
core/src/machine/: debugger.rs  gameboy.rs  mbc_initializer.rs  mod.rs
core/src/mmu/: external_memory_bus.rs  gb_mmu.rs  interrupts_handler.rs  io_bus.rs  io_ports.rs  memory.rs  mod.rs  ram.rs  vram.rs  vram_dma_controller.rs
core/src/ppu/: color.rs  gb_ppu.rs  gfx_device.rs  mod.rs  ppu_register_updater.rs  ppu_state.rs  vram.rs
core/src/timer/: timer_register_updater.rs
core/src/utils/: fixed_size_queue.rs  fixed_size_set.rs  global_static_alloctor.rs  memory_registers.rs  mod.rs  stack_string.rs  static_allocator.rs  vec2.rs
core/tests/: arithmetic_16bit_instructions_tests.rs  arithmetic_8bit_instructions_tests.rs  fixed_size_queue_tests.rs  gbc_cpu_tests.rs  integration_tests.rs  jump_instructions_tests.rs  load_16bit_instruction_tests.rs  memory_stub.rs  rotate_shift_tests.rs  test_8bit_load_opcodes.rs  test_reg.rs  timer.rs  vram_dma_controller_tests.rs
gb/: Cargo.toml
gb/src/: audio_resampler.rs  dma.rs  emulation_menu.rs  gpio_joypad_provider.rs  joypad_terminal_menu.rs  linuxfb_gfx_device.rs  main.rs  mbc_handler.rs  mpmc_gfx_device.rs  multi_device_audio.rs  sdl_audio_device.rs  sdl_audio_resampler.rs  sdl_gfx_device.rs  sdl_joypad_provider.rs  spi.rs  stupid_gfx_audio_device.rs  stupid_gfx_joypad_provider.rs  terminal_debugger.rs  wav_file_audio_device.rs
gb/src/audio/: audio_resampler.rs  magen_audio_resampler.rs  manual_audio_resampler.rs  mod.rs  multi_device_audio.rs  sdl_audio_resampler.rs  sdl_pull_audio_device.rs  sdl_push_audio_device.rs  wav_file_audio_device.rs
gb/src/joypad_menu/: font.rs  joypad_gfx_menu.rs  joypad_terminal_menu.rs  mod.rs
gb/src/rpi_gpio/: dma.rs  gpio_joypad_provider.rs  ili9341_controller.rs  mmio_spi.rs  mod.rs  raw_spi.rs  rppal_spi.rs  spi.rs
gb/src/sdl/: sdl_audio_resampler.rs  sdl_gfx_device.rs  sdl_joypad_provider.rs  sdl_pull_audio_device.rs  sdl_push_audio_device.rs  utils.rs
image_inter/: Cargo.toml  build.rs
image_inter/benches/: inter_bench.rs
image_inter/src/: lib.rs  scale.c
lib_gb/: Cargo.toml
lib_gb/benches/: lib_gb_bench.rs  my_bench.rs
lib_gb/src/: lib.rs
lib_gb/src/apu/: apu_registers_updater.rs  audio_device.rs  channel.rs  frame_sequencer.rs  freq_sweep.rs  gb_apu.rs  mod.rs  noise_sample_producer.rs  sample_producer.rs  sound_terminal.rs  sound_utils.rs  square_sample_producer.rs  timer.rs  tone_sample_producer.rs  tone_sweep_sample_producer.rs  volume_envelop.rs  wave_sample_producer.rs
lib_gb/src/cpu/: flag.rs  gb_cpu.rs  mod.rs  opcode_runner.rs  register.rs
lib_gb/src/keypad/: button.rs  joypad.rs  joypad_provider.rs  joypad_register_updater.rs  mod.rs
lib_gb/src/machine/: debugger.rs  gameboy.rs  interrupts_handler.rs  mbc_initializer.rs  mod.rs  registers_handler.rs
lib_gb/src/mmu/: access_bus.rs  dma.rs  dma_controller.rs  external_memory_bus.rs  gb_mmu.rs  interrupts_handler.rs  io_bus.rs  io_components.rs  io_comps.rs  io_ports.rs  memory.rs  mmu_register_updater.rs  mod.rs  oam_dma_controller.rs  oam_dma_transfer.rs  oam_dma_transferer.rs  ram.rs  scheduler.rs  video_memory.rs  vram.rs  vram_dma_controller.rs
lib_gb/src/ppu/: attributes.rs  color.rs  colors.rs  extended_sprite.rs  fifo_ppu.rs  fifo_register_updater.rs  gb_ppu.rs  gfx_device.rs  mod.rs  normal_sprite.rs  ppu_register_updater.rs  ppu_state.rs  sprite.rs  sprite_attribute.rs
lib_gb/src/timer/: gb_timer.rs  mod.rs  timer_register_updater.rs
lib_gb/src/utils/: bit_masks.rs  fixed_size_queue.rs  memory_registers.rs  mod.rs  vec2.rs
lib_gb/tests/: arithmetic_16bit_instructions_tests.rs  arithmetic_8bit_instructions_tests.rs  calculate_hashes.rs  fixed_size_queue_tests.rs  gbc_cpu_tests.rs  integration_tests.rs  jump_instructions_tests.rs  load_16bit_instruction_tests.rs  memory_stub.rs  rotate_shift_tests.rs  test_8bit_load_opcodes.rs  test_reg.rs  timer.rs  vram_dma_controller_tests.rs
libretro/: Cargo.toml  build.rs
libretro/src/: devices.rs  lib.rs  logging.rs
nx/: Cargo.toml  Dockerfile  Makefile  build.rs
nx/include/: magenboy.h
nx/src/: allocator.rs  devices.rs  lib.rs  logging.rs  magenboy.h  main.c
rpi/: Cargo.toml  build.rs
rpi/.cargo/: config.toml
rpi/src/: configuration.rs  delay.rs  lib.rs  syncronization.rs
rpi/src/drivers/: disk.rs  fat32.rs  gpio_joypad.rs  ili9341_gfx_device.rs  mod.rs
rpi/src/peripherals/: bcm_host.rs  dma.rs  emmc.rs  gpio.rs  gpu.rs  mailbox.rs  mini_uart.rs  mod.rs  power.rs  spi.rs  timer.rs  utils.rs
rusty_gfx/: Cargo.toml  README.md
rusty_gfx/src/: event.rs  event_handler.rs  graphics.rs  initializer.rs  lib.rs  surface.rs
sdl/: Cargo.toml
sdl/src/: main.rs  sdl_gfx_device.rs  terminal_debugger.rs  utils.rs
sdl/src/audio/: audio_resampler.rs  (+6 more)
(+163 files in other folders)
