[workspace]
resolver = "2"

members = [
    "sdl",
    "core",
    "rpi",
    "common", 
    "libretro",
    "nx"
]

[workspace.package]
version = "4.0.0"
authors = ["alloncm <alloncm@gmail.com>"]
rust-version = "1.76"   # cause of nx used to build for the nintendo switch
edition = "2021"

[profile.release]
lto = true  # Samller binaries and faster code