[package]
name = "baremetal"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lib_gb = {path = "../lib_gb", features = ["u16pixel"]}
image_inter = {path = "../image_inter"}

[features]
default = ["rpi4"]
rpi4 = []
rpi2 = []