[package]
name = "common"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_gb = {path = "../lib_gb"}
crossbeam-channel = "0.5"
log = "0.4"
fern = "0.6"
chrono = "0.4"