[package]
name = "magenboy_common"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magenboy_core = {path = "../core"}
log = "0.4"
cfg-if = "1"
crossbeam-channel = {version = "0.5", optional = true}
fern = {version = "0.6", optional = true}
chrono = {version = "0.4", optional = true}

[features]
std = ["chrono", "fern", "crossbeam-channel"]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"
fast_image_resize = "0.9.3"     # to benchmark my results

[[bench]]
name = "inter_bench"
harness = false