[package]
name = "magenboy_core"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
log = "0.4"
cfg-if = "1"

[features]
apu = []
dbg = []

[dev-dependencies]
criterion = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
image = "0.24"

[[bench]]
name = "lib_gb_bench"
harness = false