[package]
name = "gb"
version = "2.1.0"
authors = ["alloncm <alloncm@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "magenboy"
path = "src/main.rs"

[dependencies]
lib_gb = {path = "../lib_gb/"}
image_inter = {path = "../image_inter", optional = true}
bcm_host = {path = "../bcm_host", optional = true}
log = "0.4"
fern = "0.6"
chrono = "0.4"
sdl2 = "0.35"
wav = "1.0"
crossbeam-channel = "0.5"
cfg-if = "1.0"
crossterm = "0.23"
rppal = {version = "0.13", optional = true}
libc = {version = "0.2", optional = true}
nix = {version = "0.24", features = ["ioctl"], optional = true}

[features]
default = ["static-sdl"]
sdl-resample = []
push-audio = []
static-sdl = ["sdl2/bundled", "sdl2/static-link"]
static-scale = []
u16pixel = ["lib_gb/u16pixel"]
rpi = ["rppal", "u16pixel", "image_inter"]
mmio = ["rpi", "nix", "libc", "bcm_host"] # requires sudo