[package]
name = "gb"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "magenboy"
path = "src/main.rs"

[dependencies]
lib_gb = {path = "../lib_gb/"}
image_inter = {path = "../image_inter", optional = true}
bcm_host = {path = "../bcm_host", optional = true}
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"]}
fern = "0.6"
chrono = "0.4"
sdl2 = {version = "0.35", optional = true}
wav = {version = "1.0", optional = true}
crossbeam-channel = "0.5"
cfg-if = "1.0"
rppal = {version = "0.13", optional = true}
libc = {version = "0.2", optional = true}
nix = {version = "0.24", optional = true}

[features]
default = ["static-sdl", "apu"]
sdl = ["sdl2"]
sdl-resample = ["apu"]
push-audio = ["apu"]
static-sdl = ["sdl", "sdl2/bundled", "sdl2/static-link"]
u16pixel = ["lib_gb/u16pixel"]
apu = ["lib_gb/apu", "sdl", "wav"]
rpi = ["rppal", "u16pixel", "image_inter", "nix/signal"]
mmio = ["rpi", "nix/ioctl", "libc", "bcm_host"] # requires sudo