[package]
name = "gb"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "magenboy"
path = "src/main.rs"

[dependencies]
lib_gb = {path = "../lib_gb/", features = ["apu"]}
common = {path = "../common/"}
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"]}
sdl2 = "0.35"
crossbeam-channel = "0.5"
cfg-if = "1.0"
wav = "1.0"

[features]
default = ["static-sdl"]
sdl-resample = []
push-audio = []
static-sdl = ["sdl2/bundled", "sdl2/static-link"]
u16pixel = ["lib_gb/u16pixel"]