[package]
name = "lib_gb"
version = "2.1.0"
authors = ["alloncm <alloncm@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"

[features]
u16pixel = []

[dev-dependencies]
criterion = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5"

[[bench]]
name = "lib_gb_bench"
harness = false