[package]
name = "magenboy_nx"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magenboy_core = { path = "../core", features = ["apu"] }
nx = { git = "https://github.com/aarch64-switch-rs/nx", features=["services"] }