[package]
name = "magenboy_rpi"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magenboy_core = {path = "../core"}
magenboy_common = {path = "../common"}
log = "0.4"
cfg-if = "1"
bitfield-struct = {version = "0.9", optional = true}
libc = {version = "0.2", optional = true}
nix = {version = "0.24", optional = true}
crossbeam-channel = {version = "0.5", optional = true}
rppal = {version = "0.14", optional = true}
arrayvec = {version = "0.7.6", default-features = false, optional = true}

[features]
os = ["magenboy_common/std", "libc", "nix/ioctl", "crossbeam-channel", "rppal"]
bm = ["arrayvec", "bitfield-struct"]

[[bin]]
name = "rpios"
required-features = ["os"]

[[bin]]
name = "baremetal"
required-features = ["bm"]