[package]
name = "rusty_gfx"
version = "0.1.0"
authors = ["alloncm <alloncm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.33.0", features = ["bundled", "static-link","unsafe_textures"]}
